@@ -1,7 +1,11 @@
 2008-10-28  Don Porter  <dgp@users.sourceforge.net>
 
+	* generic/tkListbox.c:	Make literal return values consistent with
+	those generated by Tcl_PrintDouble().
+
 	* tests/canvText.test:	Backport test updates in light of the
 	* tests/entry.test:	2008-10-05 commit.
+	* tests/listbox.test:
 
 	* generic/tkEntry.c:	Fix missing space constructing the scroll
 	command.
